--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,20 +6,19 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components{ 
-
-  .scrollhost{
+@layer components {
+  .scrollhost {
     scrollbar-color: rgb(254 240 138) transparent;
   }
   .scrollhost::-webkit-scrollbar {
-  width: clamp(0.4em, 0.5em, 0.7em) 
-}
+    width: clamp(0.4em, 0.5em, 0.7em);
+  }
 
-.scrollhost::-webkit-scrollbar-thumb {
-  background-color: rgb(254 240 138);
-  outline: 3px solid black;
-  border-radius: 10px;
-}
+  .scrollhost::-webkit-scrollbar-thumb {
+    background-color: rgb(254 240 138);
+    outline: 3px solid black;
+    border-radius: 10px;
+  }
 
   .custom-shape-divider-top-1670661657 {
     position: absolute;
@@ -28,274 +27,271 @@
     line-height: 0;
     transform: rotate(180deg);
     z-index: -1;
-}
+  }
 
-.custom-shape-divider-top-1670661657 svg {
+  .custom-shape-divider-top-1670661657 svg {
     position: relative;
     display: block;
     width: calc(110% + 1.3px);
     height: 420px;
-}
+  }
 
-.custom-shape-divider-top-1670661657 .shape-fill {
+  .custom-shape-divider-top-1670661657 .shape-fill {
     fill: #573205;
-}
+  }
 
-@media screen and (max-width: 680px){
-  .custom-shape-divider-top-1670661657 {
-    position: absolute;
-    top: 0;
+  @media screen and (max-width: 680px) {
+    .custom-shape-divider-top-1670661657 {
+      position: absolute;
+      top: 0;
+      overflow: hidden;
+      line-height: 0;
+      transform: rotate(180deg);
+      z-index: -1;
+    }
+
+    .custom-shape-divider-top-1670661657 svg {
+      position: relative;
+      display: block;
+      width: calc(160% + 1.3px);
+      height: 220px;
+    }
+
+    .custom-shape-divider-top-1670661657 .shape-fill {
+      fill: #573205;
+    }
+  }
+
+  :root {
+    --bg: #17181c;
+    --fg: #c7cad1;
+    --primary: #4311bf;
+  }
+
+  .hourglass,
+  .hourglass:before,
+  .hourglass:after {
+    animation-duration: 15s;
+    animation-iteration-count: infinite;
+  }
+  .hourglass {
+    --polygonH: polygon(
+      0% 0%,
+      100% 0%,
+      100% 5.55%,
+      95% 5.55%,
+      95% 28%,
+      60% 46%,
+      60% 54%,
+      95% 72%,
+      95% 94.45%,
+      100% 94.45%,
+      100% 100%,
+      0% 100%,
+      0% 94.45%,
+      5% 94.45%,
+      5% 72%,
+      40% 54%,
+      40% 46%,
+      5% 28%,
+      5% 5.55%,
+      0% 5.55%
+    );
+    animation-name: flip;
+    animation-timing-function: ease-in-out;
+    background-image: linear-gradient(
+      var(--primary) 0.25em,
+      #737a8c55 0.5em 4.25em,
+      var(--primary) 2.25em
+    );
+    clip-path: var(--polygonH);
+    -webkit-clip-path: var(--polygonH);
     overflow: hidden;
-    line-height: 0;
-    transform: rotate(180deg);
-    z-index: -1;
-}
-
-.custom-shape-divider-top-1670661657 svg {
     position: relative;
+    width: 2.5em;
+    height: 4.5em;
+    z-index: 0;
+  }
+  .hourglass:before,
+  .hourglass:after {
+    animation-timing-function: linear;
+    content: '';
     display: block;
-    width: calc(160% + 1.3px);
-    height: 220px;
-}
-
-.custom-shape-divider-top-1670661657 .shape-fill {
-    fill: #573205;
-}
-}
-
-:root {
-  --bg: #17181c;
-  --fg: #c7cad1;
- --primary: #4311bf;
-}
-
-.hourglass,
-.hourglass:before,
-.hourglass:after {
- animation-duration: 15s;
- animation-iteration-count: infinite;
-}
-.hourglass {
- --polygonH: polygon(
-  0% 0%,
-  100% 0%,
-  100% 5.55%,
-  95% 5.55%,
-  95% 28%,
-  60% 46%,
-  60% 54%,
-  95% 72%,
-  95% 94.45%,
-  100% 94.45%,
-  100% 100%,
-  0% 100%,
-  0% 94.45%,
-  5% 94.45%,
-  5% 72%,
-  40% 54%,
-  40% 46%,
-  5% 28%,
-  5% 5.55%,
-  0% 5.55%
- );
- animation-name: flip;
- animation-timing-function: ease-in-out;
- background-image: linear-gradient(
-  var(--primary) 0.25em,
-  #737a8c55 0.5em 4.25em,
-  var(--primary) 2.25em
- );
- clip-path: var(--polygonH);
- -webkit-clip-path: var(--polygonH);
- overflow: hidden;
- position: relative;
- width: 2.5em;
- height: 4.5em;
- z-index: 0;
-}
-.hourglass:before,
-.hourglass:after {
- animation-timing-function: linear;
- content: "";
- display: block;
- position: absolute;
-}
-.hourglass:before {
- --polygonB1: polygon(
-  0% 0%,
-  100% 0%,
-  100% 24%,
-  50% 47%,
-  50% 47%,
-  50% 47%,
-  50% 47%,
-  50% 47%,
-  50% 47%,
-  50% 47%,
-  50% 47%,
-  0% 24%
- );
- --polygonB2: polygon(
-  0% 4%,
-  100% 4%,
-  100% 24%,
-  55% 45%,
-  55% 100%,
-  55% 100%,
-  55% 100%,
-  45% 100%,
-  45% 100%,
-  45% 100%,
-  45% 45%,
-  0% 24%
- );
- --polygonB3: polygon(
-  0% 24%,
-  100% 24%,
-  100% 24%,
-  55% 45%,
-  55% 80%,
-  100% 100%,
-  100% 100%,
-  0% 100%,
-  0% 100%,
-  45% 80%,
-  45% 45%,
-  0% 24%
- );
- --polygonB4: polygon(
-  45% 45%,
-  55% 45%,
-  55% 45%,
-  55% 45%,
-  55% 58%,
-  100% 76%,
-  100% 100%,
-  0% 100%,
-  0% 76%,
-  45% 58%,
-  45% 45%,
-  45% 45%
- );
- --polygonB5: polygon(
-  50% 53%,
-  50% 53%,
-  50% 53%,
-  50% 53%,
-  50% 53%,
-  100% 76%,
-  100% 100%,
-  0% 100%,
-  0% 76%,
-  50% 53%,
-  50% 53%,
-  50% 53%
- );
- animation-name: fill;
- background-color: var(--fg);
- background-size: 100% 3.6em;
- clip-path: var(--polygonB1);
- -webkit-clip-path: var(--polygonB1);
- top: 0.25em;
- left: 0.25em;
- width: 2em;
- height: 4em;
- z-index: 1;
-}
-.hourglass:after {
- animation-name: glare;
- background: linear-gradient(
-    90deg,
-    #0000 0.5em,
-    #0003 0.5em 1.5em,
-    #0000 1.5em 3.5em,
-    #fff3 3.5em 4.5em,
-    #fff0 4.5em 6.5em,
-    #0003 6.5em 7.5em,
-    #0000 7.5em
-   )
-   0 0 / 100% 0.5em,
-  linear-gradient(
-    90deg,
-    #0000 0.75em,
-    #0003 0.75em 1.25em,
-    #0000 1.25em 3.75em,
-    #fff3 3.75em 4.25em,
-    #fff0 4.25em 6.75em,
-    #0003 6.75em 7.25em,
-    #0000 7.25em
-   )
-   0 0.5em / 100% 8em,
-  linear-gradient(
-    90deg,
-    #0000 0.5em,
-    #0003 0.5em 1.5em,
-    #0000 1.5em 3.5em,
-    #fff3 3.5em 4.5em,
-    #fff0 4.5em 6.5em,
-    #0003 6.5em 7.5em,
-    #0000 7.5em
-   )
-   0 100% / 100% 0.5em;
- background-repeat: repeat-x;
- top: 0;
- left: -3em;
- width: 200%;
- height: 100%;
- z-index: 2;
-}
-/* Animations */
-@keyframes fill {
- from {
-  clip-path: var(--polygonB1);
-  -webkit-clip-path: var(--polygonB1);
- }
- 10% {
-  clip-path: var(--polygonB2);
-  -webkit-clip-path: var(--polygonB2);
- }
- 45% {
-  clip-path: var(--polygonB3);
-  -webkit-clip-path: var(--polygonB3);
- }
- 80% {
-  clip-path: var(--polygonB4);
-  -webkit-clip-path: var(--polygonB4);
- }
- 85%,
- to {
-  clip-path: var(--polygonB5);
-  -webkit-clip-path: var(--polygonB5);
- }
-}
-@keyframes glare {
- from,
- 90% {
-  transform: translateX(0);
- }
- to {
-  transform: translateX(3em);
- }
-}
-@keyframes flip {
- from,
- 90% {
-  transform: rotate(0);
- }
- to {
-  transform: rotate(180deg);
- }
-}
+    position: absolute;
+  }
+  .hourglass:before {
+    --polygonB1: polygon(
+      0% 0%,
+      100% 0%,
+      100% 24%,
+      50% 47%,
+      50% 47%,
+      50% 47%,
+      50% 47%,
+      50% 47%,
+      50% 47%,
+      50% 47%,
+      50% 47%,
+      0% 24%
+    );
+    --polygonB2: polygon(
+      0% 4%,
+      100% 4%,
+      100% 24%,
+      55% 45%,
+      55% 100%,
+      55% 100%,
+      55% 100%,
+      45% 100%,
+      45% 100%,
+      45% 100%,
+      45% 45%,
+      0% 24%
+    );
+    --polygonB3: polygon(
+      0% 24%,
+      100% 24%,
+      100% 24%,
+      55% 45%,
+      55% 80%,
+      100% 100%,
+      100% 100%,
+      0% 100%,
+      0% 100%,
+      45% 80%,
+      45% 45%,
+      0% 24%
+    );
+    --polygonB4: polygon(
+      45% 45%,
+      55% 45%,
+      55% 45%,
+      55% 45%,
+      55% 58%,
+      100% 76%,
+      100% 100%,
+      0% 100%,
+      0% 76%,
+      45% 58%,
+      45% 45%,
+      45% 45%
+    );
+    --polygonB5: polygon(
+      50% 53%,
+      50% 53%,
+      50% 53%,
+      50% 53%,
+      50% 53%,
+      100% 76%,
+      100% 100%,
+      0% 100%,
+      0% 76%,
+      50% 53%,
+      50% 53%,
+      50% 53%
+    );
+    animation-name: fill;
+    background-color: var(--fg);
+    background-size: 100% 3.6em;
+    clip-path: var(--polygonB1);
+    -webkit-clip-path: var(--polygonB1);
+    top: 0.25em;
+    left: 0.25em;
+    width: 2em;
+    height: 4em;
+    z-index: 1;
+  }
+  .hourglass:after {
+    animation-name: glare;
+    background: linear-gradient(
+          90deg,
+          #0000 0.5em,
+          #0003 0.5em 1.5em,
+          #0000 1.5em 3.5em,
+          #fff3 3.5em 4.5em,
+          #fff0 4.5em 6.5em,
+          #0003 6.5em 7.5em,
+          #0000 7.5em
+        )
+        0 0 / 100% 0.5em,
+      linear-gradient(
+          90deg,
+          #0000 0.75em,
+          #0003 0.75em 1.25em,
+          #0000 1.25em 3.75em,
+          #fff3 3.75em 4.25em,
+          #fff0 4.25em 6.75em,
+          #0003 6.75em 7.25em,
+          #0000 7.25em
+        )
+        0 0.5em / 100% 8em,
+      linear-gradient(
+          90deg,
+          #0000 0.5em,
+          #0003 0.5em 1.5em,
+          #0000 1.5em 3.5em,
+          #fff3 3.5em 4.5em,
+          #fff0 4.5em 6.5em,
+          #0003 6.5em 7.5em,
+          #0000 7.5em
+        )
+        0 100% / 100% 0.5em;
+    background-repeat: repeat-x;
+    top: 0;
+    left: -3em;
+    width: 200%;
+    height: 100%;
+    z-index: 2;
+  }
+  /* Animations */
+  @keyframes fill {
+    from {
+      clip-path: var(--polygonB1);
+      -webkit-clip-path: var(--polygonB1);
+    }
+    10% {
+      clip-path: var(--polygonB2);
+      -webkit-clip-path: var(--polygonB2);
+    }
+    45% {
+      clip-path: var(--polygonB3);
+      -webkit-clip-path: var(--polygonB3);
+    }
+    80% {
+      clip-path: var(--polygonB4);
+      -webkit-clip-path: var(--polygonB4);
+    }
+    85%,
+    to {
+      clip-path: var(--polygonB5);
+      -webkit-clip-path: var(--polygonB5);
+    }
+  }
+  @keyframes glare {
+    from,
+    90% {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(3em);
+    }
+  }
+  @keyframes flip {
+    from,
+    90% {
+      transform: rotate(0);
+    }
+    to {
+      transform: rotate(180deg);
+    }
+  }
 
   .nodrag {
     pointer-events: none;
-}
+  }
 
-
-
-  @media(max-width:500px){
-
-    .anim span{
+  @media (max-width: 500px) {
+    .anim span {
       display: inline-block;
       height: 2.1em;
       width: 2.1em;
@@ -304,46 +300,43 @@
       background-color: #b56c18;
       animation: mob-anim 28s infinite linear;
       transform: translateY(-900px);
-  }
- 
-  .anim span:nth-child(7n) {
-  animation-delay: 8s;
-  margin-left: 2em;
-}
-.anim span:nth-child(7n-1) {
-  animation-delay: 0s;
-  padding-top: 1em;
-  margin-left: 17em;
+    }
 
-}
+    .anim span:nth-child(7n) {
+      animation-delay: 8s;
+      margin-left: 2em;
+    }
+    .anim span:nth-child(7n-1) {
+      animation-delay: 0s;
+      padding-top: 1em;
+      margin-left: 17em;
+    }
 
-.anim span:nth-child(7n-3) {
-  animation-delay: 12s;
-  background-color: #3d450c;
-  padding: 1em;
-  margin-left: 12em;
-}
-.anim span:nth-child(7n-4) {
-  animation-delay: 5s;
-  background-color: #8a7e11;
-}
-.anim span:nth-child(7n-5) {
-  animation-delay: 17s;
-  background-color: #a88e18;
-  padding-bottom: 1em;
-  margin-left: 10em;
-}
-.anim span:nth-child(7n-6) {
-  animation-delay: 22s;
-background-color: #99390c;
-  padding: 1.5em;
-
-}
-
+    .anim span:nth-child(7n-3) {
+      animation-delay: 12s;
+      background-color: #3d450c;
+      padding: 1em;
+      margin-left: 12em;
+    }
+    .anim span:nth-child(7n-4) {
+      animation-delay: 5s;
+      background-color: #8a7e11;
+    }
+    .anim span:nth-child(7n-5) {
+      animation-delay: 17s;
+      background-color: #a88e18;
+      padding-bottom: 1em;
+      margin-left: 10em;
+    }
+    .anim span:nth-child(7n-6) {
+      animation-delay: 22s;
+      background-color: #99390c;
+      padding: 1.5em;
+    }
   }
 
-  @media(min-width:1500px){
-    .anim span{
+  @media (min-width: 1500px) {
+    .anim span {
       display: inline-block;
       height: 3em;
       width: 3em;
@@ -351,43 +344,40 @@ background-color: #99390c;
       border-radius: 0 70px;
       background-color: #b56c18;
       animation: max-anim 24s infinite linear;
-  }
-  .anim span:nth-child(7n) {
-  animation-delay: 8s;
-}
-.anim span:nth-child(7n-1) {
-  animation-delay: 0s;
-  padding-top: 2em;
+    }
+    .anim span:nth-child(7n) {
+      animation-delay: 8s;
+    }
+    .anim span:nth-child(7n-1) {
+      animation-delay: 0s;
+      padding-top: 2em;
+    }
 
-}
-
-.anim span:nth-child(7n-3) {
-  animation-delay: 3s;
-  background-color: #3d450c;
-  padding: 2em;
-  margin-left: 10em;
-}
-.anim span:nth-child(7n-4) {
-  animation-delay: 10s;
-  background-color: #8a7e11;
-  margin-right: 5em;
-}
-.anim span:nth-child(7n-5) {
-  animation-delay: 14s;
-  background-color: #a88e18;
-  padding-bottom: 4em;
-}
-.anim span:nth-child(7n-6) {
-  animation-delay: 18s;
-  background-color: #99390c;
-  padding: 1.5em;
-
-}
+    .anim span:nth-child(7n-3) {
+      animation-delay: 3s;
+      background-color: #3d450c;
+      padding: 2em;
+      margin-left: 10em;
+    }
+    .anim span:nth-child(7n-4) {
+      animation-delay: 10s;
+      background-color: #8a7e11;
+      margin-right: 5em;
+    }
+    .anim span:nth-child(7n-5) {
+      animation-delay: 14s;
+      background-color: #a88e18;
+      padding-bottom: 4em;
+    }
+    .anim span:nth-child(7n-6) {
+      animation-delay: 18s;
+      background-color: #99390c;
+      padding: 1.5em;
+    }
   }
 
-
-  @media (min-width:500px) and (max-width:1500px){
-    .anim span{
+  @media (min-width: 500px) and (max-width: 1500px) {
+    .anim span {
       display: inline-block;
       height: 3em;
       width: 3em;
@@ -395,158 +385,149 @@ background-color: #99390c;
       border-radius: 0 70px;
       background-color: #b56c18;
       animation: anim 25s infinite linear;
+    }
+
+    .anim span:nth-child(7n) {
+      animation-delay: 8s;
+      margin-left: 4em;
+    }
+    .anim span:nth-child(7n-1) {
+      animation-delay: 0s;
+      background-color: #bf610f;
+      padding-top: 1em;
+      margin-left: 7em;
+    }
+
+    .anim span:nth-child(7n-3) {
+      animation-delay: 12s;
+      background-color: #3d450c;
+      padding: 1em;
+      margin-left: 5em;
+    }
+    .anim span:nth-child(7n-4) {
+      animation-delay: 5s;
+      background-color: #8a7e11;
+    }
+    .anim span:nth-child(7n-5) {
+      animation-delay: 17s;
+      background-color: #a88e18;
+      padding-bottom: 3em;
+      margin-left: 10em;
+    }
+    .anim span:nth-child(7n-6) {
+      animation-delay: 22s;
+      background-color: #99390c;
+      padding: 1.5em;
+      margin-left: 6em;
+    }
   }
 
-  .anim span:nth-child(7n) {
-  animation-delay: 8s;
-  margin-left: 4em;
-}
-.anim span:nth-child(7n-1) {
-  animation-delay: 0s;
-  background-color: #bf610f;
-  padding-top: 1em;
-  margin-left: 7em;
-
-}
-
-.anim span:nth-child(7n-3) {
-  animation-delay: 12s;
-  background-color: #3d450c;
-  padding: 1em;
-  margin-left: 5em;
-}
-.anim span:nth-child(7n-4) {
-  animation-delay: 5s;
-  background-color: #8a7e11;
-}
-.anim span:nth-child(7n-5) {
-  animation-delay: 17s;
-  background-color: #a88e18;
-  padding-bottom: 3em;
-  margin-left: 10em;
-}
-.anim span:nth-child(7n-6) {
-  animation-delay: 22s;
-background-color: #99390c;
-  padding: 1.5em;
-  margin-left: 6em;
-
-}
-
-  }
-
-@keyframes anim{
+  @keyframes anim {
     0% {
-        width: 3em;
-        height: 3em;
-        opacity: 1;                    
-        transform: translate(0px, 0vh) rotateZ(0deg);
+      width: 3em;
+      height: 3em;
+      opacity: 1;
+      transform: translate(0px, 0vh) rotateZ(0deg);
     }
     75% {
-        width: 3em;
-        height: 3em;
-        opacity: 1;
-        transform: translate(30px, 100vh) rotateZ(205deg); 
+      width: 3em;
+      height: 3em;
+      opacity: 1;
+      transform: translate(30px, 100vh) rotateZ(205deg);
     }
     100% {
-        width: 3em;
-        height: 3em;
-        opacity: 1;                   
-        transform: translate(60px, 130vh) rotateZ(270deg);
+      width: 3em;
+      height: 3em;
+      opacity: 1;
+      transform: translate(60px, 130vh) rotateZ(270deg);
     }
-}
+  }
 
-@keyframes max-anim{
+  @keyframes max-anim {
     0% {
-        width: 3em;
-        height: 3em;
-        opacity: 1;                    
-        transform: translate(0px, 0vh) rotateZ(0deg);
+      width: 3em;
+      height: 3em;
+      opacity: 1;
+      transform: translate(0px, 0vh) rotateZ(0deg);
     }
     75% {
-        width: 3em;
-        height: 3em;
-        opacity: 1;
-        transform: translate(30px, 115vh) rotateZ(205deg); 
+      width: 3em;
+      height: 3em;
+      opacity: 1;
+      transform: translate(30px, 115vh) rotateZ(205deg);
     }
     100% {
-        width: 3em;
-        height: 3em;
-        opacity: 1;                   
-        transform: translate(60px, 145vh) rotateZ(270deg);
+      width: 3em;
+      height: 3em;
+      opacity: 1;
+      transform: translate(60px, 145vh) rotateZ(270deg);
     }
-}
-
-@keyframes mob-anim{
-  0% {
-      width: 2.1em;
-      height: 2.1em;
-      opacity: 1;                    
-      transform: translate(0px, -100px) rotateZ(0deg);
   }
-  75% {
+
+  @keyframes mob-anim {
+    0% {
       width: 2.1em;
       height: 2.1em;
       opacity: 1;
-      transform: translate(15px, 850px) rotateZ(200deg); 
-
-  }
-  100% {
+      transform: translate(0px, -100px) rotateZ(0deg);
+    }
+    75% {
       width: 2.1em;
       height: 2.1em;
-      opacity: 0;                   
+      opacity: 1;
+      transform: translate(15px, 850px) rotateZ(200deg);
+    }
+    100% {
+      width: 2.1em;
+      height: 2.1em;
+      opacity: 0;
       transform: translate(30px, 1050px) rotateZ(270deg);
+    }
+  }
+
+  input[type='range']::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: 4px solid white;
+    height: 55px;
+    width: 15px;
+    border-radius: 25%;
+    background: white;
+    cursor: pointer;
+  }
+
+  /* All the same stuff for Firefox */
+  input[type='range']::-moz-range-thumb {
+    border: 4px solid white;
+    height: 55px;
+    width: 15px;
+    border-radius: 25%;
+    background: white;
+    cursor: pointer;
+  }
+
+  /* All the same stuff for IE */
+  input[type='range']::-ms-thumb {
+    border: 4px solid white;
+    height: 55px;
+    width: 15px;
+    border-radius: 25%;
+    background: white;
+    cursor: pointer;
+  }
+
+  input[type='range']::-webkit-slider-thumb:active {
+    /* border: 8px solid black; */
+    background: black;
+  }
+  input[type='range']::-moz-range-thumb:active {
+    /* border: 8px solid black */
+    background: black;
+  }
+  input[type='range']::-ms-thumb:active {
+    /* border: 8px solid black; */
+    background: black;
   }
 }
-
-input[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  border: 4px solid white;
-  height: 55px;
-  width: 15px;
-  border-radius: 25%;
-    background: white;
-  cursor: pointer;
-}
-
-/* All the same stuff for Firefox */
-input[type=range]::-moz-range-thumb {
-  border: 4px solid white;
-  height: 55px;
-  width: 15px;
-  border-radius: 25%;
-    background: white;
-  cursor: pointer;
-}
-
-/* All the same stuff for IE */
-input[type=range]::-ms-thumb {
-  border: 4px solid white;
-  height: 55px;
-  width: 15px;
-  border-radius: 25%;
-    background: white;
-  cursor: pointer;
-}
-
-input[type=range]::-webkit-slider-thumb:active{
-  /* border: 8px solid black; */
-    background: black;
-
-}
-input[type=range]::-moz-range-thumb:active{
-  /* border: 8px solid black */
-    background: black;
-
-}
-input[type=range]::-ms-thumb:active{
-  /* border: 8px solid black; */
-    background: black;
-}
-
-
-} 
-
 
 /*
 @-webkit-keyframes animateCloud {
@@ -684,6 +665,3 @@ right: 50px;
 top: -90px;
   }
   */
-
-
- 
